@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+23-Apr-2010 Christophe Demko
+^ renaming some functions in JLanguage and JText relative to 'plural' and 'ignored search words' function
+
 22-Apr-2010 Hannes Papenberg
 # Fixed JDispatcherTest
 # Fixed JCacheConstructTest
